# InferenceEngine

./: .gitignore  CMakeLists.txt  README.md  notes
include/: Add.h  Linear.h  Matrix.h  Model.h  ONNXLoader.h  Ops.h  ReLU.h  Softmax.h  Tensor.h
src/: Add.cc  Linear.cc  Matrix.cc  Model.cc  ONNXLoader.cc  Ops.cc  ReLU.cc  Softmax.cc  Tensor.cc
tests/: CMakeLists.txt  generate_fixtures.py  test_add.cc  test_linear.cc  test_matrix.cc  test_onnx_loader.cc  test_relu.cc  test_softmax.cc  test_tensor.cc
tests/fixtures/: deep_mlp.onnx  deep_mlp_meta.json  linear_relu.onnx  linear_relu_meta.json  linear_relu_softmax.onnx  linear_relu_softmax_meta.json  simple_relu.onnx
